--- a/index.html
+++ b/index.html
@@ -5,35 +5,45 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>IDDO</title>
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha512-SfTiTlX6kk+qitfevl/7LibUOeJWlt9rbyDn92a1DqWOw9vWG2MFoays0sgObmWazO5BQPiFucnnEAjpAB+/Sw==" crossorigin="anonymous" referrerpolicy="no-referrer" >
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha512-SfTiTlX6kk+qitfevl/7LibUOeJWlt9rbyDn92a1DqWOw9vWG2MFoays0sgObmWazO5BQPiFucnnEAjpAB+/Sw==" crossorigin="anonymous" referrerpolicy="no-referrer">
 </head>
 <body>
+<header>
     <div class="container">
-        <h1>IDDO <span  class="fa fa-cab"></span> <span class="fa fa-facebook"></span> </h1>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deserunt fugiat exercitationem aliquam consequuntur quaerat tempore ex incidunt quos tempora cumque dignissimos itaque, error, est maxime voluptates, in eligendi illum voluptatem.</p>
-        <p class="thin">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deserunt fugiat exercitationem aliquam consequuntur quaerat tempore ex incidunt quos tempora cumque dignissimos itaque, error, est maxime voluptates, in eligendi illum voluptatem.</p>
         <div class="row">
-            <div class="col-3 col-t-6 col-p-12"><p>Para</p></div>
-            <div class="col-3 col-t-6 col-p-12"><p>Para</p></div>
-            <div class="col-3 col-t-6 col-p-12"><p>Para</p></div>
-            <div class="col-3 col-t-6 col-p-12"><p>Para</p></div>
-        </div>
-        <hr>
-        <div class="row">
-            <div class="col-6 col-p-12">col</div>
-            <div class="col-6 col-p-12">col</div>
-        </div>
-        <hr>
-        <div class="row">
-            <div class="col-4 col-p-12">4</div>
-            <div class="col-4 col-p-12">4</div>
-            <div class="col-4 col-p-12">4</div>
-        </div>
-        <hr>
-        <div class="row">
-            <div class="col-3 col-p-12">3</div>
-            <div class="col-9 col-p-12">9</div>
+            <div class="col-2 col-m-6">
+                <h1><a href="">IDDO</a></h1>
+            </div>
+            <div class="col-10 col-m-6">
+                <button class="btn menu"><span></span><span></span><span></span></button>
+                <div class="collapse">
+                    <div class="flex justify-space-bet align-center">
+                        <nav>
+                            <ul class="flex">
+                                <li><a href="">Home</a></li>
+                                <li><a href="">Services</a></li>
+                                <li><a href="">Portfolio</a></li>
+                                <li><a href="">About</a></li>
+                                <li><a href="">Contact</a></li>
+                            </ul>
+                        </nav>
+                        <button class="btn">Sign up</button>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
+</header>
+<div class="banner" role="banner">
+    <div class="container">
+        <div class="flex align-center">
+            <div><button><span class="fa fa-play-circle-o"></span></button></div>
+            <div>
+                <p>Let me show you a few things</p>
+                <a href="">Click to play video</a>
+            </div>
+        </div>
+    </div>
+</div>
 </body>
 </html>
