--- a/index.html
+++ b/index.html
@@ -45,5 +45,144 @@
         </div>
     </div>
 </div>
+<section class="wrap-3">
+    <div class="container">
+        <div class="row">
+            <div class="col-4 col-t-6 col-p-12">
+                <h2>OUR SERVICES.</h2>
+            </div>
+            <div class="col-8 col-t-12">
+                <div class="grid">
+                    <section>
+                        <div class="flex align-center">
+                            <div class="circle"><span class="fa fa-cloud"></span></div>
+                            <div class="text">
+                                <h3>FEATURE 1</h3>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                            </div>
+                        </div>
+                    </section>
+                    <section>
+                        <div class="flex align-center">
+                            <div class="circle"><span class="fa fa-cutlery"></span></div>
+                            <div class="text">
+                                <h3>FEATURE 2</h3>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                            </div>
+                        </div>
+                    </section>
+                    <section>
+                        <div class="flex align-center">
+                            <div class="circle"><span class="fa fa-bolt"></span></div>
+                            <div class="text">
+                                <h3>FEATURE 3</h3>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                            </div>
+                        </div>
+                    </section>
+                    <section>
+                        <div class="flex align-center">
+                            <div class="circle"><span class="fa fa-gavel"></span></div>
+                            <div class="text">
+                                <h3>FEATURE 4</h3>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                            </div>
+                        </div>
+                    </section>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<div class="wrap-4">
+    <div class="container">
+        <div class="row">
+            <div class="col-2 col-p-4"><span class="fa fa-lightbulb-o"></span></div>
+            <div class="col-2 col-p-4"><span class="fa fa-globe"></span></div>
+            <div class="col-2 col-p-4"><span class="fa fa-camera-retro"></span></div>
+            <div class="col-2 col-p-4"><span class="fa fa-wrench"></span></div>
+            <div class="col-2 col-p-4"><span class="fa fa-microphone"></span></div>
+            <div class="col-2 col-p-4"><span class="fa fa-money"></span></div>
+        </div>
+    </div>
+</div>
+<section class="wrap-5">
+    <div class="container">
+        <div class="row">
+            <div class="col-4 col-t-6 col-p-12">
+                <h2>OUR WORKS.</h2>
+                <button class="btn active">All</button><button class="btn">Website</button><button class="btn">Branding</button>
+            </div>
+        </div>  
+        <div class="row">
+            <div class="col-4">
+                <div class="work">
+                    <figure>
+                        <img src="img/work1.webp" alt="wrk 1" width="370" height="370" loading="lazy">
+                        <figcaption>
+                            <h3>heading</h3>
+                            <p>designed by | Author</p>
+                        </figcaption>
+                    </figure>
+                </div>
+            </div>
+            <div class="col-4">
+                <div class="work">
+                    <figure>
+                        <img src="img/work1.webp" alt="wrk 1" width="370" height="370" loading="lazy">
+                        <figcaption>
+                            <h3>heading</h3>
+                            <p>designed by | Author</p>
+                        </figcaption>
+                    </figure>
+                </div>
+            </div>
+            <div class="col-4">
+                <div class="work">
+                    <figure>
+                        <img src="img/work1.webp" alt="wrk 1" width="370" height="370" loading="lazy">
+                        <figcaption>
+                            <h3>heading</h3>
+                            <p>designed by | Author</p>
+                        </figcaption>
+                    </figure>
+                </div>
+            </div>
+            <div class="col-4">
+                <div class="work">
+                    <figure>
+                        <img src="img/work1.webp" alt="wrk 1" width="370" height="370" loading="lazy">
+                        <figcaption>
+                            <h3>heading</h3>
+                            <p>designed by | Author</p>
+                        </figcaption>
+                    </figure>
+                </div>
+            </div>
+            <div class="col-4">
+                <div class="work">
+                    <figure>
+                        <img src="img/work1.webp" alt="wrk 1" width="370" height="370" loading="lazy">
+                        <figcaption>
+                            <h3>heading</h3>
+                            <p>designed by | Author</p>
+                        </figcaption>
+                    </figure>
+                </div>
+            </div>
+            <div class="col-4">
+                <div class="work">
+                    <figure>
+                        <img src="img/work1.webp" alt="wrk 1" width="370" height="370" loading="lazy">
+                        <figcaption>
+                            <h3>heading</h3>
+                            <p>designed by | Author</p>
+                        </figcaption>
+                    </figure>
+                </div>
+            </div>
+        </div>  
+    </div>
+</section>
 </body>
 </html>
