--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             </div>
         </div>  
         <div class="row">
-            <div class="col-4">
+            <div class="col-4 col-t-6 col-p-12">
                 <div class="work">
                     <figure>
                         <img src="img/work1.webp" alt="wrk 1" width="370" height="370" loading="lazy">
@@ -126,7 +126,7 @@
                     </figure>
                 </div>
             </div>
-            <div class="col-4">
+            <div class="col-4 col-t-6 col-p-12">
                 <div class="work">
                     <figure>
                         <img src="img/work1.webp" alt="wrk 1" width="370" height="370" loading="lazy">
@@ -137,7 +137,7 @@
                     </figure>
                 </div>
             </div>
-            <div class="col-4">
+            <div class="col-4 col-t-6 col-p-12">
                 <div class="work">
                     <figure>
                         <img src="img/work1.webp" alt="wrk 1" width="370" height="370" loading="lazy">
@@ -148,7 +148,7 @@
                     </figure>
                 </div>
             </div>
-            <div class="col-4">
+            <div class="col-4 col-t-6 col-p-12">
                 <div class="work">
                     <figure>
                         <img src="img/work1.webp" alt="wrk 1" width="370" height="370" loading="lazy">
@@ -159,7 +159,7 @@
                     </figure>
                 </div>
             </div>
-            <div class="col-4">
+            <div class="col-4 col-t-6 col-p-12">
                 <div class="work">
                     <figure>
                         <img src="img/work1.webp" alt="wrk 1" width="370" height="370" loading="lazy">
@@ -170,7 +170,7 @@
                     </figure>
                 </div>
             </div>
-            <div class="col-4">
+            <div class="col-4 col-t-6 col-p-12">
                 <div class="work">
                     <figure>
                         <img src="img/work1.webp" alt="wrk 1" width="370" height="370" loading="lazy">
@@ -181,8 +181,110 @@
                     </figure>
                 </div>
             </div>
-        </div>  
+        </div> 
+        <button class="seemore"><span class="fa fa-plus-circle"></span></button> 
     </div>
 </section>
+<div class="wrap-6">
+    <div class="container">
+        <div class="row">
+            <div class="col-2"></div>
+            <div class="col-8 col-t-12">
+                <div class="reviews">
+                    <div class="review active">
+                        <blockquote>
+                            <q>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Porro iure voluptate reiciendis laborum aliquam officia labore eum.</q>
+                            <footer>
+                                <img src="img/jack.webp" alt="jack efron" width="70" height="70" loading="lazy">
+                                <b>JACK EFRON</b>
+                            </footer>
+                        </blockquote>
+                    </div>
+                    <div class="review">
+                        <q>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Porro iure voluptate reiciendis laborum aliquam officia labore eum. </q>
+                            <footer>
+                                <img src="img/jack.webp" alt="jack efron" width="70" height="70" loading="lazy">
+                                <b>JACK EFRON</b>
+                            </footer>
+                    </div>
+                    <div class="review">
+                        <q>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Porro iure voluptate reiciendis laborum aliquam officia labore eum.</q>
+                            <footer>
+                                <img src="img/jack.webp" alt="jack efron" width="70" height="70" loading="lazy">
+                                <b>JACK EFRON</b>
+                            </footer>
+                    </div>
+                    <ol class="pager flex">
+                        <li><a class="active" href=""></a></li>
+                        <li><a href=""></a></li>
+                        <li><a href=""></a></li>
+                    </ol>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<section class="wrap-7">
+    <div class="container">
+        <div class="row">
+            <div class="col-4 col-t-6 col-p-12">
+                <h2>OUR TEAM.</h2>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-4 col-m-12">
+                <div class="team">
+                    <img src="img/michael.webp" alt="michael" width="170" height="170" loading="lazy">
+                    <div class="social">
+                        <ul class="flex">
+                            <li><a href=""><span class="fa fa-twitter"></span></a></li>
+                            <li><a href=""><span class="fa fa-facebook"></span></a></li>
+                            <li><a href=""><span class="fa fa-instagram"></span></a></li>
+                        </ul>
+                    </div>
+                    <div class="gap">
+                        <h3>MICHAEL JOE</h3>
+                        <small>CEO &amp; FOUNDER</small>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate officia quidem quo nam debitis recusandae ducimus. Harum eaque laboriosam fugiat libero, consequatur distinctio nesciunt voluptas dolorem, minima incidunt, dignissimos quasi?</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-4 col-m-12">
+                <div class="team">
+                    <img src="img/michael.webp" alt="michael" width="170" height="170" loading="lazy">
+                    <div class="social">
+                        <ul class="flex">
+                            <li><a href=""><span class="fa fa-twitter"></span></a></li>
+                            <li><a href=""><span class="fa fa-facebook"></span></a></li>
+                            <li><a href=""><span class="fa fa-instagram"></span></a></li>
+                        </ul>
+                    </div>
+                    <div class="gap">
+                        <h3>MICHAEL JOE</h3>
+                        <small>CEO &amp; FOUNDER</small>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate officia quidem quo nam debitis recusandae ducimus. Harum eaque laboriosam fugiat libero, consequatur distinctio nesciunt voluptas dolorem, minima incidunt, dignissimos quasi?</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-4 col-m-12">
+                <div class="team">
+                    <img src="img/michael.webp" alt="michael" width="170" height="170" loading="lazy">
+                    <div class="social">
+                        <ul class="flex">
+                            <li><a href=""><span class="fa fa-twitter"></span></a></li>
+                            <li><a href=""><span class="fa fa-facebook"></span></a></li>
+                            <li><a href=""><span class="fa fa-instagram"></span></a></li>
+                        </ul>
+                    </div>
+                    <div class="gap">
+                        <h3>MICHAEL JOE</h3>
+                        <small>CEO &amp; FOUNDER</small>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate officia quidem quo nam debitis recusandae ducimus. Harum eaque laboriosam fugiat libero, consequatur distinctio nesciunt voluptas dolorem, minima incidunt, dignissimos quasi?</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <button class="seemore"><span class="fa fa-plus-circle"></span></button>  
+    </div>    
 </body>
 </html>
