--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha512-SfTiTlX6kk+qitfevl/7LibUOeJWlt9rbyDn92a1DqWOw9vWG2MFoays0sgObmWazO5BQPiFucnnEAjpAB+/Sw==" crossorigin="anonymous" referrerpolicy="no-referrer">
 </head>
-<body>
+<body id="home">
 <header>
     <div class="container">
         <div class="row">
@@ -20,11 +20,11 @@
                     <div class="flex justify-space-bet align-center">
                         <nav>
                             <ul class="flex">
-                                <li><a href="">Home</a></li>
-                                <li><a href="">Services</a></li>
-                                <li><a href="">Portfolio</a></li>
-                                <li><a href="">About</a></li>
-                                <li><a href="">Contact</a></li>
+                                <li><a href="#home">Home</a></li>
+                                <li><a href="#services">Services</a></li>
+                                <li><a href="#work">Portfolio</a></li>
+                                <li><a href="#about">About</a></li>
+                                <li><a href="#contact">Contact</a></li>
                             </ul>
                         </nav>
                         <button class="btn">Sign up</button>
@@ -45,7 +45,7 @@
         </div>
     </div>
 </div>
-<section class="wrap-3">
+<section class="wrap-3" id="services">
     <div class="container">
         <div class="row">
             <div class="col-4 col-t-6 col-p-12">
@@ -106,7 +106,7 @@
         </div>
     </div>
 </div>
-<section class="wrap-5">
+<section class="wrap-5" id="work">
     <div class="container">
         <div class="row">
             <div class="col-4 col-t-6 col-p-12">
@@ -224,7 +224,7 @@
         </div>
     </div>
 </div>
-<section class="wrap-7">
+<section class="wrap-7" id="about">
     <div class="container">
         <div class="row">
             <div class="col-4 col-t-6 col-p-12">
@@ -286,5 +286,140 @@
         </div>
         <button class="seemore"><span class="fa fa-plus-circle"></span></button>  
     </div>    
+</section>
+<div class="wrap-8">
+        <div class="container">
+            <div class="row">
+                <div class="col-3 col-m-6">
+                    <span class="fa fa-gift"></span>
+                    <p>2009</p>
+                    <b>COMMENTS</b>
+                </div>
+                <div class="col-3 col-m-6">
+                    <span class="fa fa-gift"></span>
+                    <p>2009</p>
+                    <b>COMMENTS</b>
+                </div>
+                <div class="col-3 col-m-6">
+                    <span class="fa fa-gift"></span>
+                    <p>2009</p>
+                    <b>COMMENTS</b>
+                </div>
+                <div class="col-3 col-m-6">
+                    <span class="fa fa-gift"></span>
+                    <p>2009</p>
+                    <b>COMMENTS</b>
+                </div>
+            </div>
+        </div>
+</div>
+<section class="wrap-9" >
+    <div class="container">
+        <div class="row">
+            <div class="col-4 col-t-6 col-p-12">
+                <h2>OUR SKILLS.</h2>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-8 col-t-12">
+                <div class="row">
+                    <div class="col-3"><canvas width="170" height="170"></canvas></div>
+                    <div class="col-3"><canvas width="170" height="170"></canvas></div>
+                    <div class="col-3"><canvas width="170" height="170"></canvas></div>
+                    <div class="col-3"><canvas width="170" height="170"></canvas></div>
+                </div>
+                <div class="gap">
+                    <h3>Heading 3</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magni nesciunt, amet ipsa animi omnis ad ducimus quasi quis sunt harum perspiciatis atque, eius minus exercitationem at. Voluptatum explicabo consectetur non? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nulla provident commodi reiciendis excepturi quibusdam ad, inventore atque, illo dolores quia minima iure corporis dicta voluptatibus nisi non esse placeat! Repellat!</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis animi reiciendis eaque voluptate tempore voluptatem quidem ut dolores expedita iure. Mollitia id officia totam dolores eveniet minus. Esse, saepe ratione?</p>
+                </div>
+            </div>
+            <div class="col-4 col-t-12">
+                <div class="accordion">
+                    <ul>
+                        <li>
+                            <a class="active" href=""><span class="fa fa-rocket"></span> Lorem ipsum dolor sit</a>
+                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nulla veritatis porro totam, quae quos voluptatem recusandae placeat architecto saepe ab eum deleniti.</p>
+                        </li>
+                        <li>
+                            <a href=""><span class="fa fa-lock"></span> Lorem ipsum dolor sit</a>
+                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nulla veritatis porro totam, quae quos voluptatem recusandae placeat architecto saepe ab eum deleniti dolore repellat voluptatibus, corporis possimus modi maxime minus.</p>
+                        </li>
+                        <li>
+                            <a href=""><span class="fa fa-location-arrow"></span> Lorem ipsum dolor sit</a>
+                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nulla veritatis porro totam, quae quos voluptatem recusandae placeat architecto saepe ab eum deleniti dolore repellat voluptatibus, corporis possimus modi maxime minus.</p>
+                        </li>
+                        <li>
+                            <a href=""><span class="fa fa-phone"></span> Lorem ipsum dolor sit</a>
+                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nulla veritatis porro totam, quae quos voluptatem recusandae placeat architecto saepe ab eum deleniti dolore repellat voluptatibus, corporis possimus modi maxime minus.</p>
+                        </li>
+                        <li>
+                            <a href=""><span class="fa fa-book"></span> Lorem ipsum dolor sit</a>
+                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nulla veritatis porro totam, quae quos voluptatem recusandae placeat architecto saepe ab eum deleniti dolore repellat voluptatibus, corporis possimus modi maxime minus.</p>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>  
+<div class="wrap-10">
+    <div class="container">
+        <div class="row">
+            <div class="col-3"></div>
+            <div class="col-6 col-t-12">
+                <form class="flex justify-space-bet" action="/">
+                    <div><input type="email" required placeholder="Enter your email here.."></div>
+                    <div><button class="btn">Subscribe</button></div>
+                </form>
+            </div>
+        </div>
+    </div>
+</div> 
+<div class="wrap-11">
+    <div class="container">
+        <div class="row">
+            <div class="col-1 col-t-none"></div>
+            <div class="col-2 col-t-auto col-p-auto"><div class="box"><span class="fa fa-wordpress"></span> Wordpress</div></div>
+            <div class="col-2 col-t-auto col-p-auto"><div class="box"><span class="fa fa-wordpress"></span> Wordpress</div></div>
+            <div class="col-2 col-t-auto col-p-auto"><div class="box"><span class="fa fa-wordpress"></span> Wordpress</div></div>
+            <div class="col-2 col-t-auto col-p-auto"><div class="box"><span class="fa fa-wordpress"></span> Wordpress</div></div>
+            <div class="col-2 col-t-auto col-p-auto"><div class="box"><span class="fa fa-wordpress"></span> Wordpress</div></div>
+        </div>
+    </div>
+</div>  
+<section class="wrap-12" id="contact">
+    <div class="container">
+        <div class="row">
+            <div class="col-4 col-t-6 col-p-12">
+                <h2>CONTACT US.</h2>
+                <address>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit, tempora?</address>
+                <p class="social2">
+                    <a href=""><span class="fa fa-twitter"></span></a>
+                    <a href=""><span class="fa fa-facebook"></span></a>
+                    <a href=""><span class="fa fa-google-plus"></span></a>
+                    <a href=""><span class="fa fa-pinterest"></span></a>
+                    <a href=""><span class="fa fa-instagram"></span></a>
+                    <a href=""><span class="fa fa-youtube-play"></span></a>
+                    <a href=""><span class="fa fa-skype"></span></a>
+                    <a href=""><span class="fa fa-dribbble"></span></a>
+                </p>
+            </div>
+        </div>
+        <form action="/">
+            <div class="row">
+                <div class="col-4 col-t-6 col-p-12"><label> <span class="fa fa-envelope"></span> EMAIL <input type="email" required></label></div>
+                <div class="col-4 col-t-6 col-p-12"><label> <span class="fa fa-user"></span> NAME <input type="text" required></label></div>
+                <div class="col-8 col-t-12"><label> <span class="fa fa-user"></span> MESSAGE <textarea required></textarea></label></div>
+                <div class="col-4 col-t-12"><button><span class="fa fa-check-circle-o"></span> Submit</button></div>
+            </div>
+        </form>
+    </div>
+</section>  
+<footer class="wrap-13">
+    <div class="container">
+        <p>IDDO</p>
+    </div>
+</footer>
 </body>
 </html>
